--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.idea/*
+
+
+
+
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +136,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
