--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-  "translate_server_url": "",
-  "transcribe_server_url": ""
+  "translate_server_url": "http://DESKTOP-NBG1D5R:5000",
+  "transcribe_server_url": "http://127.0.0.1:5000/transcribe"
 }
