--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-  "translate_server_url": "http://DESKTOP-NBG1D5R:5000",
-  "transcribe_server_url": "http://127.0.0.1:5000/transcribe"
+  "translate_server_url": "http://172.31.21.97/translate",
+  "transcribe_server_url": "http://172.31.23.43/transcribe"
 }
